KVM enhancements